# EnergyExpert

./: .gitignore  CMakeLists.txt
Client/: CMakeLists.txt  main.cpp
Docs/: Doxyfile
Docs/html/: _abstract_file_configuration_8h_source.html  _abstract_network_element_8h_source.html  _abstract_surface_8h_source.html  _abstract_view_item_8h_source.html  _array_8h_source.html  _array_iterator_8h_source.html  _base_metadata_class_builder_8h_source.html  _buffered_write_file_8h_source.html  _bus_8h_source.html  _collection_8h_source.html  _collection_extensions_8h_source.html  _console_logger_8h_source.html  _data_stream_already_open_exception_8h_source.html  _data_stream_not_open_exception_8h_source.html  _database_commit_failed_exception_8h_source.html  _database_execution_failed_8h_source.html  _database_not_open_exception_8h_source.html  _date_time_8h_source.html  _default_log_message_formatter_8h_source.html  _file_8h_source.html  _file_logger_8h_source.html  _html_helper_8h_source.html  _i_cloneable_8h_source.html  _i_configuration_8h_source.html  _i_data_reader_8h_source.html  _i_data_stream_8h_source.html  _i_database_connection_8h_source.html  _i_database_connection_settings_8h_source.html  _i_database_connections_provider_8h_source.html  _i_database_query_8h_source.html  _i_database_transaction_8h_source.html  _i_database_value_8h_source.html  _i_drawable_8h_source.html  _i_identified_8h_source.html  _i_json_serializable_8h_source.html  _i_log_message_formatter_8h_source.html  _i_logger_8h_source.html  _i_metadata_8h_source.html  _i_network_element_8h_source.html  _i_o_exception_8h_source.html  (+399 more)
Docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  functions_0.js  functions_1.js  functions_11.js  (+16 more)
Gui/: CMakeLists.txt  export.h
Gui/Application/: Application.cpp  Application.h
Gui/Widgets/: AbstractWidget.cpp  AbstractWidget.h  Window.cpp  Window.h
Sdk/: CMakeLists.txt  export.h  os.h  property.h  singleton.h
Sdk/Core/: ApplicationContext.cpp  ApplicationContext.h
Sdk/Core/Collections/: Array.h  ArrayIterator.h  Collection.h  CollectionExtensions.h  Iterator.h
Sdk/Core/Configuration/: AbstractFileConfiguration.cpp  AbstractFileConfiguration.h  IConfiguration.cpp  IConfiguration.h  XmlConfiguration.cpp  XmlConfiguration.h
Sdk/Core/Data/: BufferedWriteFile.cpp  BufferedWriteFile.h  File.cpp  File.h  IDataReader.cpp  IDataReader.h  IDataStream.cpp  IDataStream.h
Sdk/Core/Data/Exceptions/: DataStreamAlreadyOpenException.cpp  DataStreamAlreadyOpenException.h  DataStreamNotOpenException.cpp  DataStreamNotOpenException.h
Sdk/Core/Draws/: AbstractSurface.cpp  AbstractSurface.h  AbstractViewItem.cpp  AbstractViewItem.h
Sdk/Core/Exceptions/: IOException.cpp  IOException.h  NullPointerException.cpp  NullPointerException.h  TypeCastingException.cpp  TypeCastingException.h
Sdk/Core/Helpers/: HtmlHelper.cpp  HtmlHelper.h
Sdk/Core/Metadata/: BaseMetadataClassBuilder.h  IMetadata.cpp  IMetadata.h  MetaObject.cpp  MetaObject.h  MetadataClass.h  TypeUids.txt
Sdk/Core/Net/: AbstractSocket.h  AbstractSocket_w.cpp  Ip4Address.cpp  Ip4Address.h  Url.cpp  Url.h
Sdk/Core/Serialization/: IJsonSerializable.h  ISerializable.h  ISerializer.h
Sdk/Core/Serialization/Json/: IJsonSerializable.h  JsonArray.cpp  JsonArray.h  JsonObject.cpp  JsonObject.h  JsonValue.cpp  JsonValue.h
Sdk/Core/Serialization/Xml/: IXmlAttributeDestroyingListener.h  IXmlDecorator.h  IXmlSerializable.cpp  IXmlSerializable.h  PugiXmlSerializer.cpp  PugiXmlSerializer.h  XmlAttribute.cpp  XmlAttribute.h  XmlAttributeNameDecorator.cpp  XmlAttributeNameDecorator.h  XmlNode.cpp  XmlNode.h  XmlObject.cpp  XmlObject.h  XmlSerializerImpl.cpp  XmlSerializerImpl.h  XmlTagNameDecorator.cpp  XmlTagNameDecorator.h  XmlValue.cpp  XmlValue.h
Sdk/Core/Types/: DateTime.cpp  DateTime.h  ICloneable.h  IDrawable.h  IObservable.h  IStringable.h  Uuid.cpp  Uuid.h
Sdk/Database/: IDatabaseConnection.h  IDatabaseConnectionSettings.h  IDatabaseConnectionsProvider.cpp  IDatabaseConnectionsProvider.h  IDatabasePatch.h  IDatabasePatcher.cpp  IDatabasePatcher.h  IDatabaseQuery.cpp  IDatabaseQuery.h  IDatabaseTransaction.cpp  IDatabaseTransaction.h  IDatabaseValue.cpp  IDatabaseValue.h
Sdk/Database/Exceptions/: DatabaseCommitFailedException.cpp  DatabaseCommitFailedException.h  DatabaseExecutionFailed.cpp  DatabaseExecutionFailed.h  DatabaseNotOpenException.cpp  DatabaseNotOpenException.h
Sdk/Database/PostgreSql/: PostgreSqlConnection.cpp  PostgreSqlConnection.h  PostgreSqlConnectionSettings.cpp  PostgreSqlConnectionSettings.h  PostgreSqlPatcher.cpp  PostgreSqlPatcher.h  PostgreSqlQuery.cpp  PostgreSqlQuery.h  PostgreSqlTransaction.cpp  PostgreSqlTransaction.h  PostgreSqlValue.cpp  PostgreSqlValue.h
Sdk/Database/PostgreSql/Patches/: DatabaseCreationPatch.cpp  DatabaseCreationPatch.h
Sdk/Logs/: ConsoleLogger.cpp  ConsoleLogger.h  DefaultLogMessageFormatter.cpp  DefaultLogMessageFormatter.h  FileLogger.cpp  FileLogger.h  ILogMessageFormatter.h  ILogger.cpp  ILogger.h
Sdk/Model/: AbstractEntity.cpp  AbstractEntity.h  IIdentified.cpp  IIdentified.h
Sdk/Model/Network/: AbstractNetworkElement.cpp  AbstractNetworkElement.h  Bus.cpp  Bus.h  INetworkElement.cpp  INetworkElement.h  Network.cpp  Network.h  NetworkElementBuilder.cpp  NetworkElementBuilder.h  Thread.cpp  Thread.h  TransformerSubstation.cpp  TransformerSubstation.h  Wire.cpp  Wire.h
Sdk/Model/Security/: SecurityUser.cpp  SecurityUser.h
Server/: CMakeLists.txt  main.cpp
cmake/: PostgreSql.cmake  pugixml.cmake
